output error file